Fixed some elements not showing on previous commit

--- a/src/style/home.css
+++ b/src/style/home.css
@@ -115,6 +115,7 @@ h4 {
     .title {
         z-index: 3;
         position: absolute;
+        display: block;
         top: 28vh;
         left: 10vw;
         right: 10vw;
@@ -159,6 +160,7 @@ h4 {
             border-radius: 30px;
             margin: 5px;
             opacity: 80%;
+            display: block;
         }
 
         .about-us-photos {
